<?xml version="1.0"?>
<package format="2">
  <name>gs_camera</name>
  <version>1.0.2</version>
  <description>The gs_camera package</description>

  <maintainer email="ilya@eadsoft.com">Ilya Danilenko</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cv_camera</exec_depend>

  <export>

  </export>
</package>
